--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   dartz: ^0.10.1
   internet_connection_checker: ^1.0.0
   event_bus: ^2.0.0
+  flutter_markdown: ^0.7.4+1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
